AUGREL/src/objects/Financial_Account_Customer__c.object
<CustomObject>
    <description>Junction object linking a financial account to its primary borrower(s) and co-­‐borrower(s) and
captures customer information related to the specific account such as privacy settings.</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Financial Account Customers</relationshipLabel>
        <relationshipName>Financial_Account_Customers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Active_Duty_End_Date__c</fullName>
        <formula>Account__r.Active_Duty_End_Date__pc</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Duty End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Active_Duty_Start_Date__c</fullName>
        <formula>Account__r.Active_Duty_Start_Date__pc</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Duty Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Address_Special_BillTo__c</fullName>
        <description>Special Address</description>
        <label>Care Of</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Special_Garage__c</fullName>
        <label>Care Of</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Contact__c</fullName>
        <description>Used in the Cease and Decease flow</description>
        <label>Alternate Contact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BSG_Flag__c</fullName>
        <formula>Financial_Account__r.BSG_Flag__c</formula>
        <label>(IVR) BSG Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bill_To_Home_Phone_Status__c</fullName>
        <description>Added as part of StrikeIron Integration</description>
        <label>Home Phone Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Work_Phone_Status__c</fullName>
        <description>Added as part of StrikeIron integration</description>
        <label>Work Phone Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Zip_Code_Extn__c</fullName>
        <label>Billing Zip Code Extn</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Borrower_Position__c</fullName>
        <label>Borrower Position</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Borrower_Status__c</fullName>
        <label>Borrower Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CO_BK_Case_Number__c</fullName>
        <description>SRC: UCM 
INT: Y 
Trans: N 
BU: Charged Off Accounts Servicing 
FD: TFS BK Case Number</description>
        <label>BK Case Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CO_BK_Code__c</fullName>
        <description>SRC: UCM
INT: Y 
Trans: N 
BU: Charged Off Accounts Servicing 
FD: TFS BK Code</description>
        <inlineHelpText>A C-7-Peti
B C-11-Peti
C C-12-Peti
D C-13-Peti
E C-7-Disc
F C-11-Disc
G C-12-Disc
H C-13-Disc
I C-7-Dmis
J C-11-Dmis
K C-12-Dmis
L C-13-Dmis
M C-7-WDdwn
N C-11-WDdwn
O C-12-WDdwn
P C-13-WDdwn
Q RPBKInd
R C-7
S C-7
V C-7</inlineHelpText>
        <label>BK Code</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CO_BK_District__c</fullName>
        <description>SRC: UCM 
INT: Y 
Trans: N 
BU: Charged Off Accounts Servicing 
FD: TFS BK District</description>
        <label>BK District</label>
        <picklist>
            <picklistValues>
                <fullName>AK001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALM01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALM02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALN01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALN02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALN03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALN04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALS01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARE01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARE02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARE03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARE04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARE05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARW01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARW02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARW03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARW04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARW05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARW06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARW07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAC01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAC02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAC03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAC04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAC05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAE01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAE02</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CO_BK_Filing_Date__c</fullName>
        <description>SRC: UCM 
INT: Y 
Trans: N 
BU: Charged Off Accounts Servicing 
FD: TFS BK Filing Date</description>
        <label>BK Filing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CO_Bad_Address_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SRC: RMS
INT: Y
Trans: Y
BU: Charged Off Accounts Servicing
FD: Bad Address flag
. Y = Bad else blank</description>
        <label>Bad Address Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CO_ECOA_Code__c</fullName>
        <description>SRC: RMS / SFDC 
INT: Y 
Trans: N 
BU: Charged Off Accounts Servicing 
FD: ECOA Code</description>
        <label>ECOA Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CO_Flag_Credit_Bureau_Reporting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SRC: RMS / SFDC 
INT: Y 
Trans: N 
BU: Charged Off Accounts Servicing 
FD: Co-Borrower Do Not Report to Credit Bureau Flag (Only applies to co-borrower)</description>
        <label>Flag Credit Bureau Reporting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClickToPay_Electronic_Biz_Agreement_Date__c</fullName>
        <label>ClickToPay Electronic Biz Agreement Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ClickToPay_Electronic_Biz_Agreement__c</fullName>
        <label>ClickToPay Electronic Biz Agreement</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Click_To_Pay_Terms_And_Conditions_Date__c</fullName>
        <description>C2P T&amp;C Date</description>
        <label>Click To Pay Terms And Conditions Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Click_To_Pay_Terms_And_Conditions__c</fullName>
        <label>Click To Pay Terms And Conditions</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Click_To_Pay_Version__c</fullName>
        <description>C2P Version</description>
        <label>Click To Pay Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication_Comments__c</fullName>
        <label>Communication Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Borrower_Number__c</fullName>
        <description>First Character of Customer_role_Type</description>
        <formula>LEFT(Customer_Role_Type__c, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Borrower Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Full_Name__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to concatenate the proper name field components from the related account object so the customer may be addressed by their full name in a letter or other communication.</description>
        <formula>IF(Account__r.IsPersonAccount,
  IF(!ISBLANK(TEXT(Account__r.Salutation)), TEXT(Account__r.Salutation) &amp; &quot; &quot;, &quot;&quot;) &amp;
  IF(!ISBLANK(Account__r.FirstName), Account__r.FirstName &amp; &quot; &quot;, &quot;&quot;) &amp;
  IF(!ISBLANK(Account__r.Middle_Name__pc), Account__r.Middle_Name__pc &amp; &quot; &quot;, &quot;&quot;) &amp;
  Account__r.LastName &amp;
  IF(!ISBLANK(Account__r.Name_Suffix__pc), &quot;, &quot; &amp; Account__r.Name_Suffix__pc, &quot;&quot;)
,
  Account__r.Name
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Role_Type__c</fullName>
        <label>Customer Role Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <formula>HYPERLINK(&quot;javascript:if(typeof(srcUp) == &apos;function&apos;) {srcUp(&apos;/&quot; &amp; Account__c &amp; &quot;?isdtp=vw&apos;);} else {window.open(&apos;/&quot; &amp; Account__c &amp; &quot;&apos;, &apos;_self&apos;);}&quot;,
IF(Account__r.IsPersonAccount,
  IF(!ISBLANK(TEXT(Account__r.Salutation)), TEXT(Account__r.Salutation) &amp; &quot; &quot;, &quot;&quot;) &amp;
  IF(!ISBLANK(Account__r.FirstName), Account__r.FirstName &amp; &quot; &quot;, &quot;&quot;) &amp;
  Account__r.LastName &amp;
  IF(!ISBLANK(Account__r.Name_Suffix__pc), Account__r.Name_Suffix__pc, &quot;&quot;)
,
  Account__r.Name
)
, &quot;_self&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Sale__c</fullName>
        <description>Used Start Process &quot;contract modifications&quot; and &quot;lease end&quot;</description>
        <formula>if(CONTAINS(Mailing_Street_Garage__c,&apos;PO Box&apos;),&apos;&apos;,
if(OR(TEXT(Mailing_State_Garage__c)= &apos;AK&apos;,TEXT(Mailing_State_Garage__c)= &apos;AR&apos;,TEXT(Mailing_State_Garage__c)= &apos;CA&apos;,TEXT(Mailing_State_Garage__c)= &apos;CO&apos;,TEXT(Mailing_State_Garage__c)= &apos;DE&apos;,TEXT(Mailing_State_Garage__c)= &apos;GA&apos;,TEXT(Mailing_State_Garage__c)= &apos;IN&apos;,TEXT(Mailing_State_Garage__c)= &apos;IA&apos;,TEXT(Mailing_State_Garage__c)= &apos;KS&apos;,TEXT(Mailing_State_Garage__c)= &apos;KY&apos;,TEXT(Mailing_State_Garage__c)= &apos;LA&apos;,TEXT(Mailing_State_Garage__c)= &apos;MD&apos;,TEXT(Mailing_State_Garage__c)= &apos;MA&apos;,TEXT(Mailing_State_Garage__c)= &apos;MN&apos;,TEXT(Mailing_State_Garage__c)= &apos;MS&apos;,TEXT(Mailing_State_Garage__c)= &apos;MO&apos;,TEXT(Mailing_State_Garage__c)= &apos;MT&apos;,TEXT(Mailing_State_Garage__c)= &apos;NE&apos;,TEXT(Mailing_State_Garage__c)= &apos;NH&apos;,TEXT(Mailing_State_Garage__c)= &apos;NM&apos;,TEXT(Mailing_State_Garage__c)= &apos;ND&apos;,TEXT(Mailing_State_Garage__c)= &apos;OK&apos;,TEXT(Mailing_State_Garage__c)= &apos;OR&apos;,TEXT(Mailing_State_Garage__c)= &apos;PA&apos;,TEXT(Mailing_State_Garage__c)= &apos;RI&apos;,TEXT(Mailing_State_Garage__c)= &apos;TX&apos;,TEXT(Mailing_State_Garage__c)= &apos;UT&apos;,TEXT(Mailing_State_Garage__c)= &apos;VT&apos;,TEXT(Mailing_State_Garage__c)= &apos;VA&apos;,TEXT(Mailing_State_Garage__c)= &apos;WV&apos;,TEXT(Mailing_State_Garage__c)= &apos;WY&apos;)
,&apos;Eligible&apos;,
if(OR(TEXT(Mailing_State_Garage__c)= &apos;DC&apos;,TEXT(Mailing_State_Garage__c)= &apos;HI&apos;,TEXT(Mailing_State_Garage__c)= &apos;NC&apos;,TEXT(Mailing_State_Garage__c)= &apos;SD&apos;,TEXT(Mailing_State_Garage__c)= &apos;FL&apos;,TEXT(Mailing_State_Garage__c)= &apos;ME&apos;,TEXT(Mailing_State_Garage__c)= &apos;SC&apos;,TEXT(Mailing_State_Garage__c)= &apos;WI&apos;)
,&apos;Not Eligible&apos;, 
if(OR(TEXT(Mailing_State_Garage__c)= &apos;AL&apos;,TEXT(Mailing_State_Garage__c)= &apos;AZ&apos;,TEXT(Mailing_State_Garage__c)= &apos;CT&apos;,TEXT(Mailing_State_Garage__c)= &apos;ID&apos;,TEXT(Mailing_State_Garage__c)= &apos;IL&apos;,TEXT(Mailing_State_Garage__c)= &apos;MI&apos;,TEXT(Mailing_State_Garage__c)= &apos;NV&apos;,TEXT(Mailing_State_Garage__c)= &apos;NJ&apos;,TEXT(Mailing_State_Garage__c)= &apos;NY&apos;,TEXT(Mailing_State_Garage__c)= &apos;OH&apos;,TEXT(Mailing_State_Garage__c)= &apos;TN&apos;,TEXT(Mailing_State_Garage__c)= &apos;WA&apos;)
,&apos;Tax Collecting&apos;,
&apos;Lease Only&apos;))))</formula>
        <label>Direct Sale</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Election_Abbreviated_Consent_Date__c</fullName>
        <description>Abbreviated Consent Date</description>
        <label>Election Abbreviated Consent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Election_Abbreviated_Consent__c</fullName>
        <label>Abbreviated Consent</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Election_Direct_Mail_Marketing__c</fullName>
        <label>Direct Mail Marketing</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Election_Electronic_Business_Agreement__c</fullName>
        <label>Electronic Business Agreement</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Election_Email_Marketing__c</fullName>
        <label>Email Marketing</label>
        <picklist>
            <controllingField>Election_Overall_Consent__c</controllingField>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Election_Home_Phone_Marketing__c</fullName>
        <label>Home Phone Marketing</label>
        <picklist>
            <controllingField>Election_Overall_Consent__c</controllingField>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Election_Language_Preference__c</fullName>
        <label>Language Preference</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doc Trans May Be Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Election_Mobile_Phone_Marketing__c</fullName>
        <label>Mobile Phone Marketing</label>
        <picklist>
            <controllingField>Election_Overall_Consent__c</controllingField>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Election_Other_Phone_Marketing__c</fullName>
        <label>Other Phone Marketing</label>
        <picklist>
            <controllingField>Election_Overall_Consent__c</controllingField>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Election_Overall_Consent_Date__c</fullName>
        <description>Overall Consent Date</description>
        <label>Election Overall Consent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Election_Overall_Consent__c</fullName>
        <label>Overall Consent</label>
        <picklist>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Election_Payment_NotReceivedEmail__c</fullName>
        <label>Payment Not Received Email</label>
        <picklist>
            <controllingField>Election_Overall_Consent__c</controllingField>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Election_Payment_NotReceivedText__c</fullName>
        <label>Payment Not Received Text</label>
        <picklist>
            <controllingField>Election_Overall_Consent__c</controllingField>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Election_Payment_Received_Email__c</fullName>
        <label>Payment Received Email</label>
        <picklist>
            <controllingField>Election_Overall_Consent__c</controllingField>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Election_Payment_Received_Text__c</fullName>
        <label>Payment Received Text</label>
        <picklist>
            <controllingField>Election_Overall_Consent__c</controllingField>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Election_Payment_Reminder_Day__c</fullName>
        <label>Payment Reminder Day</label>
        <picklist>
            <controllingField>Election_Overall_Consent__c</controllingField>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Election_Payment_Reminder_Email__c</fullName>
        <label>Payment Reminder Email</label>
        <picklist>
            <controllingField>Election_Overall_Consent__c</controllingField>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Election_Payment_Reminder_Text__c</fullName>
        <label>Payment Reminder Text</label>
        <picklist>
            <controllingField>Election_Overall_Consent__c</controllingField>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Election_Text_Marketing__c</fullName>
        <label>Text Marketing</label>
        <picklist>
            <controllingField>Election_Overall_Consent__c</controllingField>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Electronic_Business_Agreement_Date__c</fullName>
        <description>EBA Date</description>
        <label>Electronic Business Agreement Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FAC_Communication_Comments__c</fullName>
        <description>Used in the Cease and Decease flow</description>
        <label>FAC Communication Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FA_Role_Status__c</fullName>
        <description>external ID -  Account No~Position~Status</description>
        <externalId>true</externalId>
        <label>FA Role Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Account_Customer__c</fullName>
        <externalId>true</externalId>
        <label>Financial Account Customer</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Financial_Account_Number__c</fullName>
        <formula>Financial_Account__r.Financial_Account_Number__c</formula>
        <label>(IVR) Financial Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Account__c</fullName>
        <label>Financial Account</label>
        <referenceTo>Financial_Account__c</referenceTo>
        <relationshipLabel>Financial Account Customers</relationshipLabel>
        <relationshipName>Financial_Account_Customers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>First_Name_or_Business_Name__c</fullName>
        <formula>IF(Account__r.IsPersonAccount, Account__r.FirstName, Account__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name or Business Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Address_Lock_BillTo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Address Lock Flag (Y/N)</description>
        <label>Flag Address Lock BillTo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Address_Lock_Garage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Address Lock Flag (Y/N)</description>
        <label>Flag Address Lock Garage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Bankruptcy__c</fullName>
        <description>Bankruptcy Code</description>
        <label>Flag Bankruptcy</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Home_Phone_DNC_BillTo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Home Phone DNC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Home_Phone_DNC_Garage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Home Phone DNC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Home_Phone_Invalid_BillTo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Invalid Home Phone Number</description>
        <label>Home Phone Invalid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Home_Phone_Invalid_Garage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Invalid Home Phone Number</description>
        <label>Home Phone Invalid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Home_Phone_IsMobile_BillTo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Home Phone Mobile Indicator</description>
        <label>Home Phone Is Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Home_Phone_IsMobile_Garage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Home Phone Mobile Indicator</description>
        <label>Home Phone Is Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Home_Phone_NonLanLine_BillTo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Home Phone Non-Landline Indicator Flag</description>
        <label>Flag Home Phone NonLanLine BillTo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Military_Source__c</fullName>
        <label>Military Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Military_Status__c</fullName>
        <description>Military Flag</description>
        <label>Flag Military Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Mobile_Phone_DNC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Phone DNC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Mobile_Phone_Invalid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Phone Invalid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Mobile_Phone_IsMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SRC: UCM 
INT: TIBCO UCM Update 
Trans: N 
BU: Legal and Compliance requirements for TFS auto dialer 
FD: A third party vendor services is utilized to scrub the current customer phone data for validation purposes to determine phone type. UCM publishes the data to downstream system to identify if the mobile number entered is truly mobile (CP 2401)</description>
        <label>Mobile Phone is Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Office_Of_Foreign_Asset_Control__c</fullName>
        <label>Flag Office Of Foreign Asset Control</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_SCRA_Status__c</fullName>
        <description>SCRA Flag</description>
        <label>Flag SCRA Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Work_Phone_DNC_BillTo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Work Phone DNC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Work_Phone_DNC_Garage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Work Phone DNC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Work_Phone_Invalid_BillTo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Invalid Work Phone Number</description>
        <label>Work Phone Invalid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Work_Phone_Invalid_Garage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Invalid Work Phone Number</description>
        <label>Work Phone Invalid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Work_Phone_IsMobile_Garage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Work Phone Mobile Indicator</description>
        <label>Work Phone Is Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Work_Phone_Is_Mobile_BillTo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Work Phone Mobile Indicator</description>
        <label>Work Phone Is Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Work_Phone_NonLanLine_BillTo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Work Phone Non-Landline Indicator Flag</description>
        <label>Flag Work Phone NonLanLine BillTo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Garage_Home_Phone_Status__c</fullName>
        <description>Added as part of Strike Iron Integration</description>
        <label>Home Phone Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Garage_Mobile_Phone_Status__c</fullName>
        <description>Added as part of StrikeIron Integration</description>
        <label>Mobile Phone Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>